--- a/public/style.css
+++ b/public/style.css
@@ -1,18 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Anton&display=swap");
 
 body {
-  background-color: white;
+  background-color: rgb(232, 229, 229);
+  /* background-image: url(./img/0.jpeg); */
 }
 
-h1 {
-  transition: color 2s ease-in-out;
-}
-
-h2 {
-  transition: color 2s ease-in-out;
-}
-
-span {
+div {
   transition: color 2s ease-in-out;
 }
 
@@ -55,6 +48,10 @@ span {
   text-align: center;
 }
 
+#clock2 {
+  font-family: "Anton", sans-serif;
+}
+
 /* https://velog.io/@dpdnjs402/ksy7cwux */
 .nameInput {
   text-align: center;
@@ -90,11 +87,12 @@ li {
 .todoListwidtControl {
   text-align: left;
   width: 80%;
+  font-weight: bold;
 }
 
 .wrapper {
+  border: 0.1rem solid;
   width: 400px;
-
   box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
     0 4px 6px -2px rgba(0, 0, 0, 0.05);
   border-radius: 4px;
@@ -102,17 +100,17 @@ li {
 }
 
 .todoInput {
+  transition: color 2s ease-in-out;
   background-color: transparent;
   border: none;
-  border-bottom: 1px solid #ccc;
-  color: #555;
+  border-bottom: 1px solid rgb(164, 24, 24);
   box-sizing: border-box;
   font-family: "Arvo";
   font-size: 18px;
   height: 50px;
   left: 50%;
   top: 50%;
-  width: 300px;
+  width: 310px;
 }
 
 .todoInput:focus {
@@ -120,16 +118,53 @@ li {
 }
 
 input::-webkit-input-placeholder {
-  color: rgb(131, 75, 75);
+  transition: color 2s ease-in-out;
 }
 
 #greeting {
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-size: 40px;
+  margin: auto;
 }
 
 .transparentButton {
   background-color: transparent;
   border: 0;
   outline: 0;
+}
+
+.transparentButton2 {
+  background-color: transparent;
+  color: green;
+  font-size: 18px;
+  border: 0;
+  outline: 0;
+}
+
+#quote {
+  font-family: "Courier New", Courier, monospace;
+  font-weight: bold;
+  font-size: large;
+}
+
+.underline {
+  opacity: 0.4;
+  text-decoration: line-through;
+}
+
+#weather {
+  font-family: Georgia, "Times New Roman", Times, serif;
+}
+
+.original-mode {
+  border-color: #000;
+  border-radius: 10px;
+  background-color: #e0e0e0;
+  color: #000;
+}
+
+.dark-mode {
+  border-color: #e0e0e0;
+  border-radius: 10px;
+  background-color: #000;
+  color: #e0e0e0;
 }
